--- a/projects/app2/BUILD.bazel
+++ b/projects/app2/BUILD.bazel
@@ -1,5 +1,5 @@
 load("@npm//@bazel/typescript:index.bzl", "ts_config")
-load("//tools:angular_ts_library.bzl", "ng_ts_project")
+load("//tools/app2:angular_ts_library.bzl", "ng_ts_project")
 
 ts_config(
     name = "tsconfig",
@@ -14,7 +14,7 @@ ng_ts_project(
     srcs = ["app2.component.ts"],
     tsconfig = ":tsconfig",
     deps = [
-      "@npm//@angular/core",
+      "@npm_app2//@angular/core",
       "@npm//@types/node",
       "//packages/libOne"
     ],
