--- a/packages/libOne/BUILD.bazel
+++ b/packages/libOne/BUILD.bazel
@@ -1,3 +1,4 @@
+load("@build_bazel_rules_nodejs//:index.bzl", "js_library")
 load("@npm//@bazel/typescript:index.bzl", "ts_config")
 load("//tools/libOne:angular_ts_library.bzl", "ng_ts_project")
 
@@ -12,20 +13,22 @@ ts_config(
 )
 
 ng_ts_project(
-    name = "libOne",
-    srcs = ["libOne.ts"],
+    name = "ts",
+    srcs = [
+        "index.ts",
+        "libOne.ts",
+        "utilOne.ts",
+    ],
     tsconfig = ":tsconfig",
     deps = [
-      "@npm//@types/node",
-      ":utilOne"
+        "@npm//@types/node",
     ],
 )
 
-ng_ts_project(
-    name = "utilOne",
-    srcs = ["utilOne.ts"],
-    tsconfig = ":tsconfig",
+js_library(
+    name = "libOne",
+    package_name = "@packages/libOne",
     deps = [
-      "@npm//@types/node",
+        ":ts",
     ],
 )
