--- a/projects/app2/package.json
+++ b/projects/app2/package.json
@@ -4,7 +4,8 @@
   "description": "example app in angular bazel monorepo",
   "scripts": {
     "build": "bazelisk build //...",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "ngcc"
   },
   "repository": {
     "type": "git",
@@ -13,11 +14,18 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@angular/animations": "10.0.0",
+    "@angular/cdk": "10.0.0",
     "@angular/core": "10.0.0",
+    "@angular/common": "10.0.0",
     "@angular/compiler": "10.0.0",
     "@angular/compiler-cli": "10.0.0",
+    "@angular/forms": "10.0.0",
+    "@angular/material": "10.0.0",
+    "@angular/platform-browser": "10.0.0",
     "rxjs": "^6.5.3",
-    "typescript": "3.9.2"
+    "typescript": "3.9.2",
+    "zone.js": "0.10.3"
   },
   "bugs": {
     "url": "https://github.com/herman-rogers/angular-bazel-monorepo/issues"
