add updated import

--- a/projects/app2/BUILD.bazel
+++ b/projects/app2/BUILD.bazel
@@ -22,5 +22,6 @@ ng_ts_project(
         "@npm//@types/node",
         "@npm_app2//@angular/core",
         "@npm_app2//@angular/common",
+        "@npm_angularLib//@angular/common",
     ],
 )
