--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,55 +1,69 @@
 {
-    "compilerOptions": {
-        "strict": true,
-        "lib": [
-            "ES2015",
-            "ES2016.Array.Include",
-            "DOM",
-        ],
-        "target": "es2015",
-        "module": "es2015",
-        "moduleResolution": "node",
-        "composite": false,
-        "declaration": true,
-        "experimentalDecorators": true,
-        "baseUrl": ".",
-        "paths": {
-            "@packages/*": ["./packages/*"],
-        },
-        "rootDirs": [
-            ".",
-            "./projects/app1",
-            "./bazel-out/host/bin/projects/app1",
-            "./bazel-out/darwin-fastbuild/bin/projects/app1",
-            "./bazel-out/k8-fastbuild/bin/projects/app1",
-            "./bazel-out/x64_windows-fastbuild/bin/projects/app1",
-            "./bazel-out/darwin-dbg/bin/projects/app1",
-            "./bazel-out/k8-dbg/bin/projects/app1",
-            "./bazel-out/x64_windows-dbg/bin/projects/app1",
-            "./projects/app2",
-            "./bazel-out/host/bin/projects/app2",
-            "./bazel-out/darwin-fastbuild/bin/projects/app2",
-            "./bazel-out/k8-fastbuild/bin/projects/app2",
-            "./bazel-out/x64_windows-fastbuild/bin/projects/app2",
-            "./bazel-out/darwin-dbg/bin/projects/app2",
-            "./bazel-out/k8-dbg/bin/projects/app2",
-            "./bazel-out/x64_windows-dbg/bin/projects/app2",
-            "./packages/libOne",
-            "./bazel-out/host/bin/packages/libOne",
-            "./bazel-out/darwin-fastbuild/bin/packages/libOne",
-            "./bazel-out/k8-fastbuild/bin/packages/libOne",
-            "./bazel-out/x64_windows-fastbuild/bin/packages/libOne",
-            "./bazel-out/darwin-dbg/bin/packages/libOne",
-            "./bazel-out/k8-dbg/bin/packages/libOne",
-            "./bazel-out/x64_windows-dbg/bin/packages/libOne",
-            "./packages/libJs",
-            "./bazel-out/host/bin/packages/libJs",
-            "./bazel-out/darwin-fastbuild/bin/packages/libJs",
-            "./bazel-out/k8-fastbuild/bin/packages/libJs",
-            "./bazel-out/x64_windows-fastbuild/bin/packages/libJs",
-            "./bazel-out/darwin-dbg/bin/packages/libJs",
-            "./bazel-out/k8-dbg/bin/packages/libJs",
-            "./bazel-out/x64_windows-dbg/bin/packages/libJs",
-        ],
+  "compilerOptions": {
+    "strict": true,
+    "lib": ["ES2015", "ES2016.Array.Include", "DOM"],
+    "target": "es2015",
+    "module": "es2015",
+    "moduleResolution": "node",
+    "composite": false,
+    "declaration": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "baseUrl": ".",
+    "paths": {
+      "@packages/*": ["./packages/*"]
     },
+    "rootDirs": [
+      ".",
+      // app1
+      "./projects/app1",
+      "./bazel-out/host/bin/projects/app1",
+      "./bazel-out/darwin-fastbuild/bin/projects/app1",
+      "./bazel-out/k8-fastbuild/bin/projects/app1",
+      "./bazel-out/x64_windows-fastbuild/bin/projects/app1",
+      "./bazel-out/darwin-dbg/bin/projects/app1",
+      "./bazel-out/k8-dbg/bin/projects/app1",
+      "./bazel-out/x64_windows-dbg/bin/projects/app1",
+
+      // app2
+      "./projects/app2",
+      "./bazel-out/host/bin/projects/app2",
+      "./bazel-out/darwin-fastbuild/bin/projects/app2",
+      "./bazel-out/k8-fastbuild/bin/projects/app2",
+      "./bazel-out/x64_windows-fastbuild/bin/projects/app2",
+      "./bazel-out/darwin-dbg/bin/projects/app2",
+      "./bazel-out/k8-dbg/bin/projects/app2",
+      "./bazel-out/x64_windows-dbg/bin/projects/app2",
+
+      // libOne
+      "./packages/libOne",
+      "./bazel-out/host/bin/packages/libOne",
+      "./bazel-out/darwin-fastbuild/bin/packages/libOne",
+      "./bazel-out/k8-fastbuild/bin/packages/libOne",
+      "./bazel-out/x64_windows-fastbuild/bin/packages/libOne",
+      "./bazel-out/darwin-dbg/bin/packages/libOne",
+      "./bazel-out/k8-dbg/bin/packages/libOne",
+      "./bazel-out/x64_windows-dbg/bin/packages/libOne",
+
+      // libJS
+      "./packages/libJs",
+      "./bazel-out/host/bin/packages/libJs",
+      "./bazel-out/darwin-fastbuild/bin/packages/libJs",
+      "./bazel-out/k8-fastbuild/bin/packages/libJs",
+      "./bazel-out/x64_windows-fastbuild/bin/packages/libJs",
+      "./bazel-out/darwin-dbg/bin/packages/libJs",
+      "./bazel-out/k8-dbg/bin/packages/libJs",
+      "./bazel-out/x64_windows-dbg/bin/packages/libJs",
+
+      // angularLib
+      "./packages/angularLib",
+      "./bazel-out/host/bin/packages/angularLib",
+      "./bazel-out/darwin-fastbuild/bin/packages/angularLib",
+      "./bazel-out/k8-fastbuild/bin/packages/angularLib",
+      "./bazel-out/x64_windows-fastbuild/bin/packages/angularLib",
+      "./bazel-out/darwin-dbg/bin/packages/angularLib",
+      "./bazel-out/k8-dbg/bin/packages/angularLib",
+      "./bazel-out/x64_windows-dbg/bin/packages/angularLib"
+    ]
+  }
 }
