run.devserver/add config and rules for app1 devserver

--- a/package.json
+++ b/package.json
@@ -18,9 +18,14 @@
   "devDependencies": {
     "@bazel/bazelisk": "^1.7.5",
     "@bazel/buildifier": "^4.0.1",
+    "@bazel/concatjs": "3.8.0",
     "@bazel/typescript": "^3.8.0",
+    "@bazel/rollup": "3.8.0",
+    "@bazel/terser": "3.8.0",
+    "@bazel/protractor": "3.8.0",
     "@types/jasmine": "^3.6.9",
     "@types/node": "^14.14.37",
+    "html-insert-assets": "^0.10.0",
     "jasmine": "^3.7.0",
     "jasmine-core": "^3.7.1",
     "rxjs": "^6.5.3",
