--- a/package.json
+++ b/package.json
@@ -17,21 +17,28 @@
   "devDependencies": {
     "@bazel/bazelisk": "^1.7.5",
     "@bazel/buildifier": "^4.0.1",
-    "@bazel/concatjs": "3.8.0",
-    "@bazel/typescript": "^3.8.0",
-    "@bazel/rollup": "3.8.0",
-    "@bazel/terser": "3.8.0",
-    "@bazel/protractor": "3.8.0",
-    "@types/jasmine": "^3.6.9",
+    "@bazel/esbuild": "4.6.2",
+    "@bazel/protractor": "4.6.2",
+    "@bazel/rollup": "4.6.2",
+    "@bazel/terser": "4.6.2",
+    "@bazel/typescript": "^4.6.2",
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-node-resolve": "^13.1.3",
     "@types/node": "^14.14.37",
-    "html-insert-assets": "^0.10.0",
+    "history-server": "^1.3.1",
+    "html-insert-assets": "^0.14.2",
     "jasmine": "^3.7.0",
     "jasmine-core": "^3.7.1",
+    "rollup": "^2.67.2",
     "rxjs": "^6.5.3",
     "typescript": "3.9.2"
   },
   "bugs": {
     "url": "https://github.com/herman-rogers/angular-bazel-monorepo/issues"
   },
-  "homepage": "https://github.com/herman-rogers/angular-bazel-monorepo#readme"
+  "homepage": "https://github.com/herman-rogers/angular-bazel-monorepo#readme",
+  "dependencies": {
+    "core-js": "2.6.9",
+    "systemjs": "6.1.2"
+  }
 }
