--- a/projects/app1/BUILD.bazel
+++ b/projects/app1/BUILD.bazel
@@ -1,7 +1,9 @@
+load("@build_bazel_rules_nodejs//:index.bzl", "pkg_web")
 load("@npm//@bazel/typescript:index.bzl", "ts_config")
 load("//tools/app1:angular_ts_library.bzl", "ng_ts_project")
 load("@npm//html-insert-assets:index.bzl", "html_insert_assets")
-load("@npm//@bazel/concatjs:index.bzl", "concatjs_devserver")
+load("@npm//@bazel/rollup:index.bzl", "rollup_bundle")
+load("@npm//history-server:index.bzl", "history_server")
 
 ts_config(
     name = "tsconfig",
@@ -12,16 +14,55 @@ ts_config(
 )
 
 ng_ts_project(
-    name = "app1",
-    srcs = ["main.dev.ts", "app1.module.ts", "app1.component.ts"],
+    name = "src",
+    srcs = [
+        "main.dev.ts", 
+        "app1.module.ts", 
+        "app1.component.ts",
+    ],
     tsconfig = ":tsconfig",
     deps = [
 #        "//packages/libJs",
 #        "//packages/libOne",
+        "@npm_app1//zone.js",
         "@npm//@types/node",
         "@npm_app1//@angular/core",
 #        "@npm_app1//@angular/common",
         "@npm_app1//@angular/platform-browser-dynamic",
+        "@npm_app1//@angular/platform-browser",
+    ],
+)
+
+# Files that we serve in both development and production
+_ASSETS = [
+    # This label references an output of the "styles" sass_binary above.
+    # ":styles.css",
+    # ":manifest.webmanifest",
+    # "//:favicon.ico",
+
+    # Directly reference a file that came from @angular/material npm package
+    # "@npm//:node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
+
+    # We load zone.js outside the bundle. That's because it's a "pollyfill"
+    # which speculates that such features might be available in a browser.
+    # Also it's tricky to configure dead code elimination to understand that
+    # zone.js is used, given that we don't have any import statement that
+    # imports from it.
+    "@npm_app1//:node_modules/zone.js/dist/zone.min.js",
+]
+
+rollup_bundle(
+    name = "bundle-es2015",
+    config_file = "rollup.config.js",
+    entry_points = {
+        # ":main.prod.ts": "index.prod",
+        ":main.dev.ts": "index.dev",
+    },
+    output_dir = True,
+    deps = [
+        ":src",
+        "@npm//@rollup/plugin-commonjs",
+        "@npm//@rollup/plugin-node-resolve",
     ],
 )
 
@@ -33,24 +74,35 @@ html_insert_assets(
         "--out=$@",
         "--roots=. $(RULEDIR)",
         "--assets",
-    ] + [
-        # This file doesn't exist during the build, but will be served by ts_devserver
-        "./_/ts_scripts.js",
+    ] + ["$(execpath %s)" % s for s in _ASSETS] + [
+        "--scripts --module $(execpath :bundle-es2015)/index.dev.js",
     ],
     data = [
         ":index.dev.html",
-    ]
+        ":bundle-es2015",
+    ] + _ASSETS,
 )
 
-concatjs_devserver(
-    name = "devserver",
-    entry_module = "angular-bazel-monorepo/projects/app1/main.dev",
-    port = 4200,
-    scripts = [
+pkg_web(
+    name = "devapp",
+    srcs = [
+        ":bundle-es2015",
+        ":inject_scripts_for_dev",
+        # "//src/assets",
+        # Include polyfills that will be requested by old browsers
+        "@npm//:node_modules/systemjs/dist/system.js",
+        "@npm//:node_modules/core-js/client/core.min.js",
+    ],
+    # In production mode we serve some polyfills with script tags that have hard-coded paths in the index.html
+    # so we must serve them at that path, by stripping a prefix
+    additional_root_paths = [
+        "npm/node_modules/core-js/client",
+        "npm/node_modules/systemjs/dist",
+    ],
+)
 
-    ],
-    static_files = [
-        ":inject_scripts_for_dev"
-    ],
-    deps = [":app1"],
+history_server(
+    name = "devserver",
+    data = [":devapp"],
+    templated_args = ["-a $$(rlocation $(rootpath :devapp)) -p 4200"],
 )
