--- a/package.json
+++ b/package.json
@@ -15,20 +15,30 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@babel/cli": "^7.6.0",
+    "@babel/core": "^7.6.0",
+    "@babel/preset-env": "^7.6.0",
     "@bazel/bazelisk": "^1.7.5",
     "@bazel/buildifier": "^4.0.1",
-    "@bazel/concatjs": "3.8.0",
-    "@bazel/typescript": "^3.8.0",
-    "@bazel/rollup": "3.8.0",
-    "@bazel/terser": "3.8.0",
-    "@bazel/protractor": "3.8.0",
+    "@bazel/angular": "^4.6.1",
+    "@bazel/typescript": "^4.6.1",
+    "@bazel/rollup": "4.6.1",
+    "@bazel/terser": "4.6.1",
+    "@bazel/protractor": "4.6.1",
     "@types/jasmine": "^3.6.9",
     "@types/node": "^14.14.37",
-    "html-insert-assets": "^0.10.0",
+    "@rollup/plugin-commonjs": "^14.0.0",
+    "@rollup/plugin-node-resolve": "^8.4.0",
+    "history-server": "^1.3.1",
+    "html-insert-assets": "^0.14.2",
     "jasmine": "^3.7.0",
     "jasmine-core": "^3.7.1",
+    "rollup": "^2.3.4",
     "rxjs": "^6.5.3",
-    "typescript": "3.9.2"
+    "typescript": "3.9.2",
+    "systemjs": "6.1.2",
+    "tslib": "^2.0.0",
+    "zone.js": "^0.11.4"
   },
   "bugs": {
     "url": "https://github.com/herman-rogers/angular-bazel-monorepo/issues"
