--- a/projects/app1/BUILD.bazel
+++ b/projects/app1/BUILD.bazel
@@ -1,7 +1,14 @@
 load("@npm//@bazel/typescript:index.bzl", "ts_config")
 load("//tools/app1:angular_ts_library.bzl", "ng_ts_project")
 load("@npm//html-insert-assets:index.bzl", "html_insert_assets")
-load("@npm//@bazel/concatjs:index.bzl", "concatjs_devserver")
+#load("@npm//@bazel/concatjs:index.bzl", "concatjs_devserver")
+load("@build_bazel_rules_nodejs//:index.bzl", "pkg_web")
+load("@npm//history-server:index.bzl", "history_server")
+load("@npm//@babel/cli:index.bzl", "babel")
+load("@npm//@bazel/rollup:index.bzl", "rollup_bundle")
+load("@npm//@bazel/terser:index.bzl", "terser_minified")
+
+package(default_visibility = ["//:__subpackages__"])
 
 ts_config(
     name = "tsconfig",
@@ -20,9 +27,59 @@ ng_ts_project(
 #        "//packages/libOne",
         "@npm//@types/node",
         "@npm_app1//@angular/core",
-#        "@npm_app1//@angular/common",
+        "@npm_app1//@angular/common",
         "@npm_app1//@angular/platform-browser-dynamic",
     ],
+)
+
+rollup_bundle(
+    name = "bundle-es2015",
+    config_file = "rollup.config.js",
+    entry_points = {
+        ":main.dev.ts": "index.dev",
+    },
+    output_dir = True,
+    deps = [
+        "//projects/app1",
+        "@npm//@rollup/plugin-commonjs",
+        "@npm//@rollup/plugin-node-resolve",
+    ],
+)
+
+# Files that we serve in both development and production
+_ASSETS = [
+    # This label references an output of the "styles" sass_binary above.
+#    ":styles.css",
+#    ":manifest.webmanifest",
+#    "//:favicon.ico",
+
+    # Directly reference a file that came from @angular/material npm package
+#    "@npm//:node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
+
+    # We load zone.js outside the bundle. That's because it's a "pollyfill"
+    # which speculates that such features might be available in a browser.
+    # Also it's tricky to configure dead code elimination to understand that
+    # zone.js is used, given that we don't have any import statement that
+    # imports from it.
+#    "@npm//:node_modules/zone.js/dist/zone.min.js",
+]
+
+babel(
+    name = "bundle-es5",
+    args = [
+        "$(execpath :bundle-es2015)",
+        "--no-babelrc",
+        "--source-maps",
+        "--presets=@babel/preset-env",
+        "--plugins=@babel/plugin-transform-modules-systemjs",
+        "--out-dir",
+        "$(@D)",
+    ],
+    data = [
+        ":bundle-es2015",
+        "@npm//@babel/preset-env",
+    ],
+    output_dir = True,
 )
 
 html_insert_assets(
@@ -33,24 +90,42 @@ html_insert_assets(
         "--out=$@",
         "--roots=. $(RULEDIR)",
         "--assets",
-    ] + [
-        # This file doesn't exist during the build, but will be served by ts_devserver
-        "./_/ts_scripts.js",
+    ] + ["$(execpath %s)" % s for s in _ASSETS] + [
+        "--scripts --module $(execpath :bundle-es2015)/index.dev.js",
     ],
     data = [
-        ":index.dev.html",
-    ]
+        "index.dev.html",
+        ":bundle-es2015",
+    ] + _ASSETS,
 )
 
-concatjs_devserver(
-    name = "devserver",
-    entry_module = "angular-bazel-monorepo/projects/app1/main.dev",
-    port = 4200,
-    scripts = [
+pkg_web(
+    name = "devapp",
+    srcs = [
+        ":bundle-es2015",
+        ":inject_scripts_for_dev",
+#        "//src/assets",
+    ],
+    # In production mode we serve some polyfills with script tags that have hard-coded paths in the index.html
+    # so we must serve them at that path, by stripping a prefix
+    additional_root_paths = [
+        "npm/node_modules/core-js/client",
+        "npm/node_modules/systemjs/dist",
+    ],
+)
 
-    ],
-    static_files = [
-        ":inject_scripts_for_dev"
-    ],
-    deps = [":app1"],
+history_server(
+    name = "devserver",
+    data = [":devapp"],
+    templated_args = ["-a $$(rlocation $(rootpath :devapp)) -p 4200"],
+)
+
+terser_minified(
+    name = "bundle-es2015.min",
+    src = ":bundle-es2015",
+)
+
+terser_minified(
+    name = "bundle-es5.min",
+    src = ":bundle-es5",
 )
