--- a/package.json
+++ b/package.json
@@ -22,23 +22,24 @@
     "@bazel/rollup": "4.6.2",
     "@bazel/terser": "4.6.2",
     "@bazel/typescript": "^4.6.2",
-    "@rollup/plugin-commonjs": "^21.0.1",
-    "@rollup/plugin-node-resolve": "^13.1.3",
-    "@types/node": "^14.14.37",
+    "@rollup/plugin-commonjs": "^14.0.0",
+    "@rollup/plugin-node-resolve": "^8.4.0",
+    "@types/node": "6.14.6",
     "history-server": "^1.3.1",
     "html-insert-assets": "^0.14.2",
     "jasmine": "^3.7.0",
     "jasmine-core": "^3.7.1",
-    "rollup": "^2.67.2",
+    "rollup": "^2.3.4",
     "rxjs": "^6.5.3",
-    "typescript": "3.9.2"
+    "typescript": "3.9.2",
+    "systemjs": "6.1.2",
+    "tslib": "^2.0.0"
   },
   "bugs": {
     "url": "https://github.com/herman-rogers/angular-bazel-monorepo/issues"
   },
   "homepage": "https://github.com/herman-rogers/angular-bazel-monorepo#readme",
   "dependencies": {
-    "core-js": "2.6.9",
-    "systemjs": "6.1.2"
+    "core-js": "2.6.9"
   }
 }
