--- a/projects/app1/package.json
+++ b/projects/app1/package.json
@@ -13,7 +13,7 @@
   },
   "author": "",
   "license": "MIT",
-  "devDependencies": {
+  "dependencies": {
     "@angular/common": "10.0.0",
     "@angular/compiler": "10.0.0",
     "@angular/compiler-cli": "10.0.0",
@@ -21,13 +21,11 @@
     "@angular/platform-browser": "10.0.0",
     "@angular/platform-browser-dynamic": "10.0.0",
     "rxjs": "^6.5.3",
-    "typescript": "3.9.2"
+    "typescript": "3.9.2",
+    "zone.js": "^0.10.3"
   },
   "bugs": {
     "url": "https://github.com/herman-rogers/angular-bazel-monorepo/issues"
   },
-  "homepage": "https://github.com/herman-rogers/angular-bazel-monorepo#readme",
-  "dependencies": {
-    "zone.js": "^0.10.3"
-  }
+  "homepage": "https://github.com/herman-rogers/angular-bazel-monorepo#readme"
 }
