--- a/projects/project_one/package.json
+++ b/projects/project_one/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app1",
+  "name": "project_one",
   "version": "1.0.0",
   "description": "example app in angular bazel monorepo",
   "scripts": {
