--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,14 +27,15 @@
 
       // Add all possible bazel-out directories
       // See https://github.com/microsoft/TypeScript/issues/37257
-      // app1
-      "./projects/app1",
-      "./bazel-out/darwin-dbg/bin/projects/app1",
-      "./bazel-out/darwin-fastbuild/bin/projects/app1",
-      "./bazel-out/k8-dbg/bin/projects/app1",
-      "./bazel-out/k8-fastbuild/bin/projects/app1",
-      "./bazel-out/x64_windows-dbg/bin/projects/app1",
-      "./bazel-out/x64_windows-fastbuild/bin/projects/app1",
+      // project_one
+      "./projects/project_one",
+      "./bazel-out/host/bin/projects/project_one",
+      "./bazel-out/darwin-dbg/bin/projects/project_one",
+      "./bazel-out/darwin-fastbuild/bin/projects/project_one",
+      "./bazel-out/k8-dbg/bin/projects/project_one",
+      "./bazel-out/k8-fastbuild/bin/projects/project_one",
+      "./bazel-out/x64_windows-dbg/bin/projects/project_one",
+      "./bazel-out/x64_windows-fastbuild/bin/projects/project_one",
 
       // app2
       "./projects/app2",
