--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -2,6 +2,8 @@ load("@npm//@bazel/typescript:index.bzl", "ts_config")
 
 package(default_visibility = ["//visibility:public"])
 
+exports_files(["favicon.ico"])
+
 ts_config(
     name = "tsconfig",
     src = "tsconfig.json",
