--- a/projects/project_one/BUILD.bazel
+++ b/projects/project_one/BUILD.bazel
@@ -32,11 +32,10 @@ ng_ts_project(
 _ASSETS = [
     # This label references an output of the "styles" sass_binary above.
     # ":styles.css",
-    # ":manifest.webmanifest",
-    # "//:favicon.ico",
+    "//:favicon.ico",
 
     # Directly reference a file that came from @angular/material npm package
-    # "@npm//:node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
+    "@npm_project_one//:node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
 
     # We load zone.js outside the bundle. That's because it's a "pollyfill"
     # which speculates that such features might be available in a browser.
