--- a/projects/project_one/package.json
+++ b/projects/project_one/package.json
@@ -14,10 +14,14 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@angular/animations": "10.0.0",
     "@angular/common": "10.0.0",
     "@angular/compiler": "10.0.0",
     "@angular/compiler-cli": "10.0.0",
     "@angular/core": "10.0.0",
+    "@angular/cdk": "10.0.0",
+    "@angular/forms": "10.0.0",
+    "@angular/material": "10.0.0",
     "@angular/platform-browser": "10.0.0",
     "@angular/platform-browser-dynamic": "10.0.0",
     "rxjs": "^6.5.3",
