--- a/projects/project_two/package.json
+++ b/projects/project_two/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "bazelisk build //...",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "ngcc"
+    "postinstall": "node_modules/.bin/ngcc --async --properties fesm2015"
   },
   "repository": {
     "type": "git",
@@ -23,9 +23,10 @@
     "@angular/forms": "10.0.0",
     "@angular/material": "10.0.0",
     "@angular/platform-browser": "10.0.0",
+    "@angular/platform-browser-dynamic": "10.0.0",
     "rxjs": "^6.5.3",
     "typescript": "3.9.2",
-    "zone.js": "0.10.3"
+    "zone.js": "^0.10.3"
   },
   "bugs": {
     "url": "https://github.com/herman-rogers/angular-bazel-monorepo/issues"
