--- a/projects/project_two/src/app/dashboard/BUILD.bazel
+++ b/projects/project_two/src/app/dashboard/BUILD.bazel
@@ -3,13 +3,10 @@ load("//tools/project_two:angular_ts_library.bzl", "ng_ts_project")
 package(default_visibility = ["//:__subpackages__"])
 
 ng_ts_project(
-    name = "app",
-    srcs = ["app.module.ts", "app.component.ts"],
+    name = "dashboard",
+    srcs = glob(["*.ts"]),
     deps = [
-        "//projects/project_two/src/app/dashboard",
-        "@npm_project_two//@angular/common",
         "@npm_project_two//@angular/core",
         "@npm_project_two//@angular/material",
-        "@npm_project_two//@angular/platform-browser",
     ],
 )
