--- a/packages/shared_components/package.json
+++ b/packages/shared_components/package.json
@@ -14,10 +14,13 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@angular/animations": "10.0.0",
+    "@angular/cdk": "10.0.0",
     "@angular/core": "10.0.0",
     "@angular/common": "10.0.0",
     "@angular/compiler": "10.0.0",
     "@angular/compiler-cli": "10.0.0",
+    "@angular/material": "10.0.0",
     "rxjs": "^6.5.3",
     "typescript": "3.9.2"
   },
