--- a/packages/shared_components/package.json
+++ b/packages/shared_components/package.json
@@ -20,9 +20,12 @@
     "@angular/common": "10.0.0",
     "@angular/compiler": "10.0.0",
     "@angular/compiler-cli": "10.0.0",
+    "@angular/forms": "10.0.0",
     "@angular/material": "10.0.0",
+    "@angular/platform-browser": "10.0.0",
     "rxjs": "^6.5.3",
-    "typescript": "3.9.2"
+    "typescript": "3.9.2",
+    "zone.js": "^0.10.3"
   },
   "bugs": {
     "url": "https://github.com/herman-rogers/angular-bazel-monorepo/issues"
